fix invisible canvases issue

--- a/toolkit/jb/svg.css
+++ b/toolkit/jb/svg.css
@@ -1,5 +1,6 @@
 .p5-canvas {
     position: fixed;
+    visibility: visible !important;
 }
 
 .rpd-node.rpd-jb-preview .fullscreen-trigger {
